--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html> 
 <html> 
  <head> 
-  <title>Web Programming</title> 
+  <title>My Webpage</title>
+  <!-- link to main stylesheet --> 
+  <link rel="stylesheet" type="text/css" href="/css/main.css"> 
  </head> 
  <body> 
   <nav> 
