--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: shaunds
 --- 
 <div class="blurb"> 
  <h1>Hello Sweet World</h1> 
- <p>Once upon a time, ..</p> 
+ <p>Click on home for a sweet surprise :)</p> 
 </div> 
